ProcessBuilder, daemon pool, weak-thread cleanup, stream close
- MainPanel.run_external_command, SettingsDialog test button, and
  MiscTools.restartApplication: replace Runtime.getRuntime().exec(String)
  with ProcessBuilder(argv). The String overload tokenises on
  whitespace, which broke any path containing a space (Windows
  "C:\Program Files\..."). Backwards-compat heuristic: if the
  whole setting is an existing File, treat it as a single-element
  argv; otherwise fall back to the legacy whitespace-token split so
  existing "command arg1 arg2" configs still work. Also inheritIO()
  so the user can see the child's stderr.
- MainPanel.THREAD_POOL: pool now uses a daemon ThreadFactory.
  Workers are named "MegaBasterd-Worker-N". Previously the pool's
  non-daemon worker threads kept the JVM alive on shutdown if any
  background loop (memory monitor, smart-proxy refresh, watchdog
  accept) missed the _exit flag -- forcing the explicit System.exit
  in byebyenow to be the only reliable way out.
- MiscTools.futureRun: route through THREAD_POOL instead of
  constructing a fresh raw non-daemon Thread per call.
- StreamChunkManager.secureWait: drop the per-thread notification
  map entry when the calling thread is no longer alive or the
  manager is exiting. The map was strong-keyed by Thread; in a
  long-running streaming server the entries accumulated forever
  as cached-pool workers expired. Also restore the interrupt.
- KissVideoStreamServer.handle finally block: explicitly close
  pipein and the CipherInputStream cis. The CipherInputStream
  retains a native AES context; every range request to a video
  (video players issue many) used to leak one until JVM exit.
  Also wrap pipeout.close() in try/catch so a broken pipe at
  shutdown doesn't skip the rest of the cleanup. Initialise cis
  to null so the post-error path is well-defined.